[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://ui/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/fonts/averia/Averia-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ui/options_menu.gd" type="Script" id=4]
[ext_resource path="res://management/settings/audio.gd" type="Script" id=5]
[ext_resource path="res://management/settings/display.gd" type="Script" id=6]
[ext_resource path="res://management/settings/controls.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[node name="pause_menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="background" type="Panel" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="foreground" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 150.0
margin_right = -40.0
margin_bottom = -50.0

[node name="main_menu" type="VBoxContainer" parent="foreground"]
margin_right = 250.0
margin_bottom = 400.0
rect_min_size = Vector2( 250, 0 )
custom_constants/separation = 40

[node name="resume" type="Button" parent="foreground/main_menu"]
margin_right = 250.0
margin_bottom = 28.0
text = "Resume"

[node name="options" type="Button" parent="foreground/main_menu"]
margin_top = 68.0
margin_right = 250.0
margin_bottom = 96.0
text = "Options"

[node name="reload" type="Button" parent="foreground/main_menu"]
margin_top = 136.0
margin_right = 250.0
margin_bottom = 164.0
text = "Return to Checkpoint"

[node name="quit" type="Button" parent="foreground/main_menu"]
margin_top = 204.0
margin_right = 250.0
margin_bottom = 232.0
text = "Save and Quit"

[node name="mainOptions" type="VBoxContainer" parent="foreground"]
margin_left = 254.0
margin_right = 504.0
margin_bottom = 400.0
rect_min_size = Vector2( 250, 0 )
custom_constants/separation = 40

[node name="audio" type="Button" parent="foreground/mainOptions"]
margin_right = 250.0
margin_bottom = 28.0
text = "Audio"

[node name="controls" type="Button" parent="foreground/mainOptions"]
margin_top = 68.0
margin_right = 250.0
margin_bottom = 96.0
text = "Controls"

[node name="display" type="Button" parent="foreground/mainOptions"]
margin_top = 136.0
margin_right = 250.0
margin_bottom = 164.0
text = "Display"

[node name="audioOptions" type="VBoxContainer" parent="foreground"]
margin_left = 508.0
margin_right = 908.0
margin_bottom = 400.0
rect_min_size = Vector2( 400, 0 )
custom_constants/separation = 40
script = ExtResource( 4 )
options_script = ExtResource( 5 )

[node name="controlOptions" type="VBoxContainer" parent="foreground"]
visible = false
margin_left = 508.0
margin_right = 908.0
margin_bottom = 400.0
rect_min_size = Vector2( 400, 0 )
custom_constants/separation = 40
script = ExtResource( 4 )
options_script = ExtResource( 7 )

[node name="displayOptions" type="VBoxContainer" parent="foreground"]
visible = false
margin_left = 508.0
margin_right = 908.0
margin_bottom = 400.0
rect_min_size = Vector2( 400, 0 )
custom_constants/separation = 40
script = ExtResource( 4 )
options_script = ExtResource( 6 )

[node name="Label" type="Label" parent="."]
margin_left = 48.0
margin_top = 83.0
margin_right = 151.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 1 )
text = "Paused"

[connection signal="pressed" from="foreground/main_menu/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="foreground/main_menu/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="foreground/main_menu/reload" to="." method="_on_reload_pressed"]
[connection signal="pressed" from="foreground/main_menu/quit" to="." method="_on_quit_pressed"]
